# cnrm-gcpnext19-demo

./: .bazelproject  .gitignore  README.md  WORKSPACE
configs/: BUILD.bazel
example/kubernetes/: BUILD.bazel  bigquery.yaml  bigquerydataset_builder.py  deployment.py  deployment.yaml  deployment_builder.py  gcsbucket_builder.py  namespace.yaml  namespace_builder.py  service.yaml  storage.yaml
example/src/main/java/com/etsy/example/: BUILD.bazel  CopyToStorage.java  Example.java  StructuredLog.java  run.sh
lib/gcloud/: BUILD.bazel  gsutil-wrapper.sh  setup-gcloud.sh
lib/kubernetes/: contexts.bzl  requirements.lock.txt  requirements.txt
lib/kubernetes/deployment_builder/: BUILD.bazel  deployment.py
tools/build_rules/: BUILD.bazel  container_images.bzl  k8s_contexts.bzl  k8s_template.bzl  k8s_templater.py  template_stamper.py
