load("@k8s_deploy//:defaults.bzl", "k8s_deploy")
load("@k8s_service//:defaults.bzl", "k8s_service")
load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")

package(default_visibility = ["//visibility:public"])

k8s_deploy(
    name = "example-deployment",
    images = {
        "example:latest": "//example/src/main/java/com/etsy/example:Example-With-YourKit",
    },
    template = "deployment.yaml",
)

k8s_service(
    name = "example-service",
    template = "service.yaml",
)
